Events and Gallery

--- a/userapp/src/app/components/gallery/gallery.component.html
+++ b/userapp/src/app/components/gallery/gallery.component.html
@@ -8,8 +8,98 @@
   <div class="thought_about">    
   <p>"The nature of yoga is to shine the light of awareness into the darkest corners of the body."</p>
   <p class="thought_author">- Jason Crandell</p> 
-  </div><br><br><br><br>
-  
+  </div><br><br><br><br><br><br><br><br><br><br><br><br>
+ 
+  <div class="row rowover">
+         
+                <div class="col-md-3">
+                        <h1 style="font-size:30px;color:green;font-weight:bold;">GALLERY</h1>
+                </div>
+                <div class="col-md-9" style="margin-top:10px;">
+                        <hr>
+                </div>
+                
+        </div>
+
+  <div class="row rowhome">
+        <div class="col-md-4 content">
+                <div class="boxcontent border border-success rounded">
+                      <img src="assets/images/gallery/g1.jpg" alt="Avatar" class="image">
+                      
+                </div>
+
+        </div>
+        <div class="col-md-4 content">
+                <div class="boxcontent border border-success rounded">
+                        <img src="assets/images/gallery/g2.jpg" alt="Avatar" class="image">
+                </div>
+                
+        </div>
+        <div class="col-md-4 content">
+                <div class="boxcontent border border-success rounded">
+                        <img src="assets/images/gallery/g3.jpg" alt="Avatar" class="image">
+                       
+                
+                </div>
+        </div>
+</div> 
+<div class="row rowhome">
+                <div class="col-md-4 content ">
+                        <div class="boxcontent border border-success rounded">
+                               <img src="assets/images/gallery/g4.jpg" alt="Avatar" class="image">
+                              
+                        </div>
+        
+                </div>
+                <div class="col-md-4 content">
+                        <div class="boxcontent border border-success rounded">
+                                <img src="assets/images/gallery/g5.jpg" alt="Avatar" class="image">
+                        </div>
+                        
+                </div>
+                <div class="col-md-4 content">
+                        <div class="boxcontent border border-success rounded">
+                                <img src="assets/images/gallery/g6.jpg" alt="Avatar" class="image">
+                               
+                        
+                        </div>
+                </div>
+        </div>
+        <div class="row rowhome">
+                        <div class="col-md-4 content ">
+                                <div class="boxcontent border border-success rounded">
+                                       <img src="assets/images/gallery/g7.jpg" alt="Avatar" class="image">
+                                      
+                                </div>
+                
+                        </div>
+                        <div class="col-md-4 content">
+                                <div class="boxcontent border border-success rounded">
+                                        <img src="assets/images/gallery/g8.jpg" alt="Avatar" class="image">
+                                </div>
+                                
+                        </div>
+                        <div class="col-md-4 content">
+                                <div class="boxcontent border border-success rounded">
+                                        <img src="assets/images/gallery/g9.jpg" alt="Avatar" class="image">
+                                       
+                                
+                                </div>
+                        </div>
+                </div>
+  <!-- <div class="row">
+      <div class="col-md-3">
+          <div class="boxcontent">
+          <img src="assets/images/gallery/g1.jpg" >
+        </div>
+      </div>
+      <div class="col-md-3">
+        <img src="assets/images/gallery/g2.jpg" >
+    </div>
+    <div class="col-md-3">
+        <img src="assets/images/gallery/g3.jpg" >
+    </div>
+  </div> -->
   
   
   
