--- a/userapp/src/app/components/events/events.component.html
+++ b/userapp/src/app/components/events/events.component.html
@@ -8,9 +8,35 @@
   <div class="thought_about">    
   <p>"If you can control the rising of the mind into ripples, you will experience Yoga."</p>
   <p class="thought_author">- Patanjali</p> 
-  </div><br><br><br><br>
+  </div><br><br><br><br><br><br><br><br><br><br><br><br>
   
-  
+  <div class="row rowover">
+         
+        <div class="col-md-3">
+                <h1 style="font-size:30px;color:green;font-weight:bold;">EVENTS</h1>
+        </div>
+        <div class="col-md-9" style="margin-top:10px;">
+                <hr>
+        </div>
+        
+</div>
+
+<div class="row rowhome">
+        <div class="col-md-6 col-sm-6 content">
+                <div class="boxcontent border border-success rounded">
+                      <img src="assets/images/eventsofady.jpg" alt="Avatar" class="image">
+                      
+                </div>
+
+        </div>
+        <div class="col-md-6 col-sm-6 content">
+                <div class="boxcontent border border-success rounded">
+                        <img src="assets/images/eventsofady1.jpg" alt="Avatar" class="image">
+                </div>
+                
+        </div>
+        
+</div> 
   
   
   
