--- a/userapp/src/app/components/gallery/gallery.component.css
+++ b/userapp/src/app/components/gallery/gallery.component.css
@@ -11,3 +11,23 @@ font-size: 35px;padding:40px;background: linear-gradient(rgba(85, 77, 77, 0.5), 
  float:right;        
 font-family: 'Tangerine', cursive;font-size: 46px;    
 }
+.rowhome{
+    padding-left:30px;padding-right:30px;
+  }
+  
+  .content{
+   padding:20px;
+  }
+  .boxcontent{
+    height:300px;
+    
+  }
+  
+  .image {
+    display: block;
+    width: 100%;
+    height:300px;
+  }
+  .rowover{
+    padding-left:30px;padding-right:30px;
+  }
