--- a/userapp/src/app/components/about/about.component.html
+++ b/userapp/src/app/components/about/about.component.html
@@ -1,23 +1,81 @@
-<app-header></app-header>
-<div class="container-fluid bg">   
-  </div><br><br>
-    <div class="container">
-      <h1 class="heading">About Me</h1>
-      <hr>
-    <div class="row">
-        <div class="col-md-6">
-          <h3>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. </h3>
-         </div>
-         <div class="col-md-6">
-           <h3> Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc</h3>
+<body class="body">
+    <app-header></app-header>
+    <div class="container-fluid">   
+      <img src="assets/images/yoga3.jpg" style="width:102.8%;height:500px;margin-left:-20px;margin-top:-20px;">
+      </div>
+    
+      <div class="thought_about">
+        <p>"Meditation means the mind is turned back upon itself.The mind stops all the thought-waves and the world stops.Your consciousness expands,Every time you meditate you will keep your growth"</p>
+        <p class="thought_author">-Swamy Vivekananda</p>
+      </div><br><br><br><br>
+    
+    
+      <div class="row rowover">
+             
+          <div class="col-md-3">
+                  <h1 style="font-size:30px;color:green;font-weight:bold;margin-top:40px;">ABOUT ADY</h1>
           </div>
-    </div><br><br><br>
-
-      
-      </div><br><br><br>
-
-
-
-      
-      
-<app-footer></app-footer>
+          <div class="col-md-9" style="margin-top:50px;">
+                  <hr>
+          </div>
+          
+    </div><br>
+    
+    <div class="row" >
+            <div class="col-md-12" style="text-align:center">
+                    <p style="color:green;font-size:24px;"><sup><span>  <i  class="fa fa-quote-left fa-3x qua_cap" style="color:orange;font-size:18px;padding-right:20px;"></i></span></sup>Yoga is the perfect opportunity to be curious about who you are.<sup><span>  <i  class="fa fa-quote-right fa-3x qua_cap" style="color:orange;font-size:18px;padding-left:20px;"></i></span></sup></p>
+                    <p class="para"><strong>Atma Darshana Yoga </strong> works on Physical, Pranic, Emotional, Mental, Social, Cultural and Spiritual health levels of individuals, it helps in controlling Psychosomatic disorders like BP, Diabetes, Obesity, Back pain, Knee pain, Depression, Anxiety etc., it develops total Personality by improving Memory, Concentration, Self confidence, Moral courage.
+                    </p>
+            </div>
+    </div><br><br>
+    <div class="row rowover">
+             
+                    <div class="col-md-3">
+                            <h1 style="font-size:30px;color:green;font-weight:bold;margin-top:40px;">OUR TRUSTEES</h1>
+                    </div>
+                    <div class="col-md-9" style="margin-top:50px;">
+                            <hr>
+                    </div>
+                    
+     </div><br><br>
+    
+     <div class="row" >
+                    <div class="col-md-4" >
+                       <div class="hovereffect">
+                        <img src="assets/images/trustees/malathi.jpg" class="trustee_image img-thumbnail" alt="Cinque Terre">   
+                        <div class="overlay">
+                                    <h2>N.H MALATHI</h2>
+                                    <a class="info" ><span class="glyphicons glyphicons-map-marker"></span> #2, Siddharuda Nilaya, 8th Main, 13th Cross, <br>Judicial Layout,GKVK Post, <br>Bangalore - 560 065.<br>
+                                    <span class="glyphicons glyphicons-earphone"></span> +91 8553639376</a>
+                        </div>
+                     </div>
+                    </div>
+                    <div class="col-md-4" >
+                        <div class="hovereffect">
+                        <img src="assets/images/trustees/gopi.jpg" class="trustee_image img-thumbnail "> 
+                        <div class="overlay">
+                                    <h2>A N Gopi</h2>
+                                    <a class="info" ><span class="glyphicons glyphicons-map-marker"></span> President, Jnana Deepika Bhargavi Education Trust,<br> Judicial Layout,<br> Bangalore 560065.<br>
+                                    <span class="glyphicons glyphicons-earphone"></span> +91 98452231323</a>
+                        </div>
+                     </div>   
+                    </div>
+                    <div class="col-md-4" >
+                        <div class="hovereffect">
+                         <img src="assets/images/trustees/preetham.jpg" class="trustee_image img-thumbnail">   
+                         <div class="overlay">
+                                    <h2>Dr. Preetham Dev</h2>
+                                    <a class="info" ><span class="glyphicons glyphicons-map-marker"></span> MBBS, MS- GS, McH- Urology<br>
+                                            preethamdev@gmail.com<br>
+                                    <span class="glyphicons glyphicons-earphone"></span>  +91 97417 04262</a>
+                        </div>
+                     </div>    
+                    </div>
+            </div><br><br><br><br><br><br><br><br>
+    
+    
+    
+          
+          
+    <app-footer></app-footer>
+    </body>
