--- a/userapp/src/app/components/gallery/gallery.component.html
+++ b/userapp/src/app/components/gallery/gallery.component.html
@@ -6,8 +6,8 @@
   </div><br><br><br>
   
   <div class="thought_about">    
-  <p>"The nature of yoga is to shine the light of awareness into the darkest corners of the body."</p>
-  <p class="thought_author">- Jason Crandell</p> 
+  <p>"The goal of meditation isn't to control your thoughts, it's to stop letting them control you."</p>
+  <p class="thought_author">- Buddha</p> 
   </div><br><br><br><br>
   
   
