--- a/userapp/src/app/components/contact/contact.component.css
+++ b/userapp/src/app/components/contact/contact.component.css
@@ -12,4 +12,14 @@ font-size: 35px;padding:40px;background: linear-gradient(rgba(85, 77, 77, 0.5), 
  float:right;        
 font-family: 'Tangerine', cursive;font-size: 46px;    
 }
-
+.rowover{
+    padding-left:30px;padding-right:30px;
+  }
+.coladdress p{
+    font-size:16px;
+}
+.coladdress{
+    padding-left:30px;padding-right:30px;overflow:hidden;}
+.colmap{
+    padding-left:50px;
+}
