--- a/userapp/src/app/components/contact/contact.component.html
+++ b/userapp/src/app/components/contact/contact.component.html
@@ -1,97 +1,105 @@
 <app-header></app-header>
-  <div class="container-fluid bg">   
-      <img src="assets/images/bannertop.jpg" height="500" width="103%">
-  </div><br><br><br>
-  
-  <div class="thought_about">    
-  <p>"The study of asana is not about mastering posture.  It’s about using posture to understand and transform yourself."</p>
-  <p class="thought_author">- B.K.S Iyengar</p> 
-  </div><br><br><br><br>
-
-
-    <div class="container">
-      <h1 class="heading">Contact Me</h1>
-      <hr>
-    <div class="row">
-        <div class="col-md-6">
-          <h2>LOCATE US</h2><br><br>
-          <h3>TEKVITY PVT LTD.<br>
-                #24, 2nd floor, Opposite Jakkur Aerodrome,<br>
-                Yashodhanagar, Yelahanka,<br>
-                Bangalore-560064</h3><br><br>
-               
-                <h3><span class="glyphicon glyphicon-earphone"></span>&nbsp;+9180-6565 6579, +91-90360 07774 <br> <br>
-
-                    <span class="glyphicon glyphicon-envelope"></span>&nbsp;INFO@TEKVITY.COM <br> <br>
-               
-                    <span class="glyphicon glyphicon-globe"></span>&nbsp;  www.tekvity.com</h3><br>
-         </div>
-         <div class="col-md-6">
-           <h2>CONTACT US</h2><br>
-
-           <form novalidate #f="ngForm" (ngSubmit)="onSubmit(f)" class="signinform">
-              <br>
-
-              <div class="form-group">
-                  <h3>Name:</h3>
-                  <input type="text" 
-                      class="form-control" 
-                      id="name" 
-                      placeholder="Enter Name" 
-                      name="name"
-                      [(ngModel)]="user.name"
-                      #username="ngModel"
-                      required>
-              </div>
-              <div *ngIf="username.errors?.required && username.touched" class="alert alert-danger">Name is required</div>
-              
-                  
-              <div class="form-group">
-                  <h3>Email:</h3>
-                  <input type="email" 
-                      class="form-control" 
-                      id="email" 
-                      placeholder="Enter Email" 
-                      name="email"
-                      [(ngModel)]="user.email"
-                      #useremail="ngModel"
-                      required>
-              </div>
-              <div *ngIf="useremail.errors?.required && useremail.touched" class="alert alert-danger">Email is required</div>
-              
-              <div class="form-group">
-                  <h3>Message:</h3>
-                  <textarea
-                      class="form-control" 
-                      id="message" 
-                      placeholder="Enter Message" 
-                     rows="4"
-                      name="message"
-                      [(ngModel)]="user.message"
-                      #usermessage="ngModel"
-                      minlength="5"
-                      maxlength="250"
-                      required>
-                      </textarea>
-              </div>
-              <div *ngIf="usermessage.errors?.required && usermessage.touched" class="alert alert-danger">Message is required</div>
-              <div *ngIf="usermessage.errors?.minlength && usermessage.touched" class="alert alert-danger">Message must be minimum 5 characters length</div>
-              
-     
-          
-                   
-                   
-                   <button  type="submit" class="btn btn-primary" >SEND</button>
-                   
-                 </form>
-          </div>
+    <div class="container-fluid bg">   
+        <img src="assets/images/bannertop.jpg" height="500" width="102.3%">
     </div><br><br><br>
+  
+    <div class="thought_about">    
+        <p>"The study of asana is not about mastering posture.  It’s about using posture to understand and transform yourself."</p>
+        <p class="thought_author">- B.K.S Iyengar</p> 
+    </div><br><br><br><br>
+    
+    <div class="row" style="margin-top:120px;">
+        <div class="col-md-6" >
+                <div class="row rowover">
+                        <div class="col-md-5">
+                                <h1 style="font-size:30px;color:green;font-weight:bold;">CONTACT US</h1>
+                        </div>
+                        <div class="col-md-7" style="margin-top:10px;">
+                                <hr>
+                        </div>
+                        
+                </div><br><br>
+                <div class="coladdress">
+                    <p><span class="glyphicon glyphicon-home"></span> #2, Siddharuda Nilaya, 8th Main, 13th Cross,
+                    Judicial Layout, Allalasandra, GKVK Post, Yelahanka, Bangalore - 560 065.</p>
+                    <p><span class="glyphicon glyphicon-phone-alt"></span> +91 - 80 2856 0168</p>
+                    <p><span class="glyphicon glyphicon-earphone"></span> +91 - 94491 66245 </p>
+                    <p><span class="glyphicon glyphicon-envelope"></span> devarajyoga58@gmail.com</p>
+                    <p><span class="glyphicon glyphicon-envelope"></span> yogidevaraj@atmadarshanayoga.in</p>
+                    <p><span class="glyphicon glyphicon-envelope"></span>  info@atmadarshanayoga.in</p>
+                    <p><span class="glyphicon glyphicon-envelope"></span> www.atmadarshanayoga.in</p>
+                </div>
+        </div>
+        <div class="col-md-6">
+                <div class="row rowover">
+                        <div class="col-md-5">
+                                <h1 style="font-size:30px;color:green;font-weight:bold;">ENQUIRY FORM</h1>
+                        </div>
+                        <div class="col-md-7" style="margin-top:10px;">
+                                <hr>
+                        </div>
+                        
+                </div><br><br>
+                <div class="coladdress">
+                <form action=""  method="post" autocomplete="off">
+                    
+                    <div class="input-group" style="width:500px;height:45px;">
+                            <span class="input-group-addon" style="color:white; background-color: orange;width:40px;">
+                                    <i class="glyphicon glyphicon-user"></i>
+                            </span> 
+                            <input type="text" class="form-control"  name="name" placeholder="Your name" required style="height:45px;"  >
+                     </div><br>
 
-      
-      </div><br><br><br>
+                    <div class="input-group" style="width:500px;height:45px;">
+                            <span class="input-group-addon" style="color:white; background-color: orange;width:40px;">
+                            <i class="glyphicon glyphicon-earphone"></i>
+                            </span>
+                          <input type="text" class="form-control"  name="phone" placeholder="Your phone" required   style="height:45px;">
+                     </div><br>
+
+                    <div class="input-group" style="width:500px;height:45px;">
+                            <span class="input-group-addon" style="color:white; background-color: orange;width:40px;">
+                            <i class="glyphicon glyphicon-glyphicon glyphicon-envelope"></i>
+                            </span>
+                          <input type="text" class="form-control"  name="email" placeholder="Your email" style="height:45px;">
+                     </div><br>
+                     
+                     <div class="input-group" style="width:500px;height:45px;">
+                            <span class="input-group-addon" style="color:white; background-color: orange;width:40px;">
+                            <i class="glyphicon glyphicon-glyphicon glyphicon-pencil"></i>
+                            </span>
+                          <input type="text" class="form-control"  name="subject" placeholder="Subject" style="height:45px;">
+                     </div><br>
+
+                     <div class="input-group" style="width:500px;height:45px;">
+                            <span class="input-group-addon" style="color:white; background-color: orange;width:40px;">
+                            <i class="glyphicon glyphicon-pencil"></i>
+                            </span>
+                            <textarea class="form-control" rows="5" name="comment" placeholder="Comment"></textarea>
+                     </div><br>
 
 
+                    <input type="submit"  value="Submit" style="background-color:green;height:48px;width:120px;color:white;margin-left:370px;border:none;" >
+                    
+                    </form>
+                </div>
+        </div>
+    </div>
+    <br><br><br>
 
-      
+    <div class="row rowover">
+            <div class="col-md-3">
+                    <h1 style="font-size:30px;color:green;font-weight:bold;">LOCATED AT</h1>
+            </div>
+            <div class="col-md-9" style="margin-top:10px;">
+                    <hr>
+            </div>
+            
+    </div><br><br>
+<div class="row">
+    <div class="col-md-12" class="colmap">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3886.2269570404214!2d77.58655995001354!3d13.08479779073645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae184162240c81%3A0x68d08147fe7b38fa!2sSwamy+Vivekananda+Yoga+Research+%40+Holistic+Health+Trust!5e0!3m2!1sen!2sin!4v1527061845846" width="1200px" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+</div><br><br><br><br><br><br>       
       
 <app-footer></app-footer>
