--- a/userapp/src/app/components/founder/founder.component.css
+++ b/userapp/src/app/components/founder/founder.component.css
@@ -1,9 +1,58 @@
 .bg{
-    margin-top:-20px;margin-left:-15px;
+    margin-top:-20px;margin-left:-15px;position:absolute;
    }
 
 .thought_about{        
-margin-top:-380px; margin-left:80px;height:315px;width: 87%;opacity: 0.8;color:white;font-weight: bold;
-font-size: 35px;padding:40px;background: linear-gradient(rgba(85, 77, 77, 0.5), rgba(71, 69, 69, 0.5));        position:relative;    }    .thought_author{        float:right;        
-font-family: 'Tangerine', cursive;font-size: 46px;padding-bottom: 25px;    
+ margin-left:80px;height:230px;width: 87%;opacity: 0.8;color:white;font-weight: bold;
+font-size: 35px;padding:40px;background: linear-gradient(rgba(85, 77, 77, 0.5), rgba(71, 69, 69, 0.5));
+ position:relative;margin-top:60px;}   
+
+.thought_author{       
+ float:right;        
+font-family: 'Tangerine', cursive;font-size: 46px;    
 }
+
+.founder_info{
+    margin-top:-320px;
+    margin-left:480px;
+    height:50px;
+    width: 57%;
+    opacity: 1;
+    color:white;
+    font-weight: bold;
+    font-size: 35px;
+    padding:40px;
+    background: linear-gradient(rgba(85, 77, 77, 0.5), rgba(71, 69, 69, 0.5));
+    position:relative;
+}
+.founder_info2{
+    margin-top:-210px;
+    margin-left:480px;
+    height:50px;
+    width: 40%;
+    opacity: 1;
+    color:white;
+    font-weight: bold;
+    font-size: 35px;
+    padding:40px;
+    background: linear-gradient(rgba(85, 77, 77, 0.5), rgba(71, 69, 69, 0.5));
+    position:relative;
+}
+.rowover{
+    padding-left:30px;padding-right:30px;
+  }
+  .para{      
+      font-size:16px;     
+       margin-left:0px;
+       margin-right:30px;     
+        text-align:justify; 
+       }
+       .trustee_image {
+        display: block;
+        width: 300px;
+        height:250px;
+        margin-left:30px;
+        transition: .5s ease;
+        backface-visibility: hidden;
+        opacity: 1;
+      }
