--- a/userapp/src/app/components/services/services.component.css
+++ b/userapp/src/app/components/services/services.component.css
@@ -11,3 +11,39 @@ font-size: 35px;padding:40px;background: linear-gradient(rgba(85, 77, 77, 0.5), 
  float:right;        
 font-family: 'Tangerine', cursive;font-size: 46px;    
 }
+
+.rowhome{
+    padding-left:30px;padding-right:30px;
+  }
+  
+  .content{
+   padding:20px;
+   font-size:20px;
+  }
+
+  .text{
+      font-size:20px;
+  }
+
+  .rowover{
+    padding-left:30px;padding-right:30px;
+  }
+
+  .para{
+    font-size:16px;
+    margin-left:30px;margin-right:30px;
+    text-align:justify;
+  }
+
+  .para1{
+    font-size:16px;
+    font-style: italic;
+    margin-left:30px;margin-right:30px;
+    text-align:justify;
+  }
+
+  .para2{
+    font-size:16px;
+    margin-left:30px;margin-right:30px;
+    text-align:justify;
+  }
