--- a/userapp/src/app/components/services/services.component.html
+++ b/userapp/src/app/components/services/services.component.html
@@ -9,7 +9,103 @@
   <div class="thought_about">    
   <p>"Yoga is a light, which once lit, will never dim. The better your practice, the brighter the flame."</p>
   <p class="thought_author">- B.K.S Iyengar</p> 
-  </div><br><br><br><br>
+  </div><br><br><br><br><br><br><br><br><br><br><br><br>
+
+  <!-- Displayed services fetched from database -->
+
+  <div class="row rowover">
+      <div class="col-md-3">
+            <h1 style="font-size:30px;color:green;font-weight:bold;">OUR SERVICES</h1>
+      </div>
+      <div class="col-md-9" style="margin-top:10px;">
+          <hr>
+      </div>
+  </div><br><br>
+
+  <p class="para">Yoga is not just about exercise of hands and legs, but a complete education and transformation of ones physical, phsychological and spiritual life.</p>
+  <p class="para">We at <b>Atma Darshana Yoga Centre</b> provide all kinds of services for your health like <b>Diabetes, Obesity, Back pain, Knee pain, Depression, Anxiety, Physical, Pranic, Emotional, Mental, Social, Cultural and Many more...</b></p><br>
+
+  <div *ngFor = "let user of users">
+    <p class="para1">{{user?.service_id}}. {{user?.service_name}}</p>
+  </div><br><br>
+
+  <div class="row rowover">
+        <div class="col-md-3">
+              <h1 style="font-size:30px;color:green;font-weight:bold;">REGULAR COURSES</h1>
+        </div>
+        <div class="col-md-9" style="margin-top:10px;">
+            <hr>
+        </div>
+  </div><br><br>
+
+  <div class="container table-responsive">
+    <table class="table table-bordered">
+      <tr class="para">
+          <th>Timings</th>
+          <th>Description</th>
+          <th>Focus</th>
+      </tr>
+      <tr class="para">
+          <th colspan="3" class="text-center table-success">MORNING</th>
+      </tr>
+      <tr class="para">
+          <td>5:00 AM</td>
+          <td>Sadhakas</td>
+          <td>Advanced Yoga Concepts</td>
+      </tr>
+      <tr class="para">
+        <td>6:00 AM</td>
+        <td>Beginners/Advanced	</td>
+        <td>Promotion of Health</td>
+     </tr>
+     <tr class="para">
+         <td>7:00 AM</td>
+         <td>Yoga Therapy</td>
+         <td>Blood Pressure(B.P)</td>
+     </tr>
+     <tr class="para">
+         <td>8.00 AM</td>
+         <td>Yoga Therapy</td>
+         <td>Diabetes Mellitus (Sugar)</td>
+     </tr>
+     <tr class="para">
+         <td>10.00 AM</td>
+         <td>Ladies Batch</td>
+         <td>Promotion of Health</td>
+     </tr>
+     <tr class="para">
+         <td>11.00 AM</td>
+         <td>Senior Citizens</td>
+         <td>Promotion of Health</td>
+     </tr>
+     <tr class="para">
+         <th colspan="3" class="text-center table-success">AFTERNOON</th>
+     </tr>
+     <tr class="para">
+         <td>3.00 PM</td>
+         <td>Beginners</td>
+         <td>Promotion of Health</td>
+     </tr>
+     <tr class="para">
+         <td>4.00 PM</td>
+         <td>Children Batch</td>
+         <td>Enhance Memory, Concentration & Behavioral Engineering</td>
+     </tr>
+     <tr class="para">
+        <td>5.00 PM</td>
+        <td>Beginners</td>
+        <td>Promotion of Health</td>
+    </tr>
+    <tr class="para">
+        <th colspan="3" class="text-center table-success">EVENING</th>
+    </tr>
+    <tr class="para">
+        <td>6:00 PM to 7.00 PM 1st Batch</td>
+        <td colspan="2">Atma Darshana Yoga for Psychosomatic Disorders, Depression & Anxiety, Family relationship problems & enhance memory & concentration OR Special Programs</td>
+    </tr>
+    </table>
+ </div>
+  
   
   
   
