--- a/userapp/src/app/components/footer/footer.component.html
+++ b/userapp/src/app/components/footer/footer.component.html
@@ -9,12 +9,12 @@
         </li>
         <li class="nav-item">
                 <a class="nav-link" href="#">
-                        <i class="fa fa-linkedin-square" style="font-size:36px;color: #ffffff;"></i>
+                        <i class="fa fa-twitter-square" style="font-size:36px;color: #ffffff;"></i>
                 </a>
         </li> 
         <li class="nav-item">
                 <a class="nav-link" href="#">
-                        <i class="fa fa-twitter-square" style="font-size:36px;color:#ffffff;"></i>
+                        <i class="fa fa-youtube-square" style="font-size:36px;color:#ffffff;"></i>
                 </a>
         </li>  
       </ul> 
