--- a/userapp/src/app/components/founder/founder.component.html
+++ b/userapp/src/app/components/founder/founder.component.html
@@ -3,7 +3,7 @@
   <app-header></app-header>
 
   <div class="container-fluid bg">   
-    <img src="assets/images/yogaban.jpg" height="500" width="104%">
+    <img src="assets/images/founder.png" height="500" width="104%">
 </div><br><br><br>
 
 <div class="thought_about">    
@@ -21,7 +21,7 @@
             <hr>
     </div>
     
-</div><br>
+</div><br><br>
 
 <div class="row" >
       <div class="col-md-12" style="margin-left:30px;">
@@ -36,7 +36,8 @@
 
 </div>
 <div class="founder_info2">
-    <p style="margin-top:-33px;position :relative;font-size:15px;">M.A (Eco), B.Com, LL.B, CAIIB, YICC, DAT, NDDY, PGDHRM, LMICAS, M. Sc-Yoga(SVYASA), Jyothish Praveen, Jythoish Visharad, M.D (AM), and M. Phil-Yoga, Ph. D-Yoga</p>
+    <p style="margin-top:-25px;position :relative;font-size:15px;">M.A (Eco), B.Com, LL.B, CAIIB, YICC, DAT, NDDY, PGDHRM, LMICAS, M. Sc-Yoga(SVYASA), 
+      <br> Jyothish Praveen, Jythoish Visharad, M.D (AM), and M. Phil-Yoga, Ph. D-Yoga</p>
 
   </div>
   
