--- a/userapp/src/app/components/home/home.component.html
+++ b/userapp/src/app/components/home/home.component.html
@@ -19,9 +19,6 @@
 <p class="para">Yoga originated in ancient India thousands of years ago. The word “yoga” derives from the Sanskrit (ancient Indian language) word “yug,” meaning to yoke, or unite. Though many people in modern times think of yoga as just a physical practice that can help you become healthier physically, the deeper purpose of yoga practice is deeply spiritual 
                 and intended to help unite your individual soul with the universal consciousness.</p>
 
-                <p class="para">  Yoga is not just about bending or twisting the body and holding the breath. It is a mechanism to bring you into a state where you see and experience reality just the way it is. If you allow your energies to become exuberant and ecstatic, your sensory body expands. This enables you to experience the whole universe as a part of yourself, making everything one – this is the union that yoga creates.
-
-                <br> <br>The founder of Yoga, Patanjali said, “Sthiram sukham asanam.” It means that a posture that seems firm and comfortable is your asana. You might be surprised to know that an asana is only a preparatory step in the practice of yoga. It is a means that helps you achieve the greater good. Yoga aims to create perfect harmony between your mind, body, and spirit. When you fine-tune yourself so that everything functions wonderfully within you, you will bring out the best of your abilities.</p>
                 <p class="para">Benefits of yoga includes enhanced blood circulation, lowered blood pressure, lowered respiratory rate, better cardiovascular endurance, stimulation of organs, improvement in gastrointestinal health, 
                                 increased immunity, higher levels of pain tolerance, increased metabolism, renewed energy, sleep etc.</p><br><br>
   <div class="row rowover">
@@ -39,7 +36,7 @@
   <div class="row rowhome">
           <div class="col-md-4 content">
                   <div class="boxcontent">
-                         <a href="#"><img src="assets/images/abt.jpeg" alt="Avatar" class="image"></a> 
+                         <a href="about"><img src="assets/images/abt.jpg" alt="Avatar" class="image"></a> 
                          <a href="about"> <div class="overlay">
                                   <div class="text">ABOUT US</div>
                           </div></a>
@@ -48,8 +45,8 @@
           </div>
           <div class="col-md-4 content">
                   <div class="boxcontent">
-                          <img src="assets/images/yoga1.jpeg" alt="Avatar" class="image">
-                          <a href="activities"><div class="overlay">
+                        <a href="services"><img src="assets/images/yoga1.jpeg" alt="Avatar" class="image"></a>
+                          <a href="services"><div class="overlay">
                                   <div class="text">OUR SERVICES</div>
                           </div></a>
                   
@@ -58,8 +55,8 @@
           </div>
           <div class="col-md-4 content">
                   <div class="boxcontent">
-                          <img src="assets/images/asana.png" alt="Avatar" class="image">
-                          <a href="contact"><div class="overlay">
+                        <a href="services"><img src="assets/images/asana.png" alt="Avatar" class="image"></a>
+                          <a href="services"><div class="overlay">
                                   <div class="text">YOGA CLASSES</div>
                           </div></a>
                   
@@ -76,7 +73,58 @@
                         <hr>
                 </div>
                 
-        </div><br><br>
+</div>
+
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+                <!-- Indicators -->
+                <ul class="carousel-indicators">
+                  <li data-target="#demo" data-slide-to="0" class="active"></li>
+                  <li data-target="#demo" data-slide-to="1"></li>
+                  <li data-target="#demo" data-slide-to="2"></li>
+                  <li data-target="#demo" data-slide-to="3"></li>
+                </ul>
+                
+                <!-- The slideshow -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                        <div class="thought_about">    
+                                <p>"There is total improvement of Health."</p>
+                                <p class="thought_author">- Ravindranath (Family & Engineer)</p> 
+                         </div>
+                  </div>
+                  <div class="carousel-item">
+                                <div class="thought_about">    
+                                        <p>"Helped in sinusitus & improvement in family."</p>
+                                        <p class="thought_author">- Dr. Prashanth (M.B.B.S)</p> 
+                                </div>
+                  </div>
+                  <div class="carousel-item">
+                                <div class="thought_about">    
+                                        <p>"I Got rid of Blood Pressure of last 20 years."</p>
+                                        <p class="thought_author">- Ramesh Nagarkar (Retd. Bank Manager)</p> 
+                                </div>
+                  </div>
+                  <div class="carousel-item">
+                                <div class="thought_about">    
+                                        <p>"I am always active after attending ADY."</p>
+                                        <p class="thought_author">- Chandrakala (Software Engineer)</p> 
+                                </div>
+                  </div>
+                  
+                </div>
+                
+                <!-- Left and right controls -->
+                <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                  <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#demo" data-slide="next">
+                  <span class="carousel-control-next-icon"></span>
+                </a>
+              </div>
+
+
+
   <br><br><br><br><br><br><br> 
   
   
