--- a/userapp/src/app/components/contact/contact.component.html
+++ b/userapp/src/app/components/contact/contact.component.html
@@ -41,7 +41,7 @@
                         
                 </div><br><br>
                 <div class="coladdress">
-                <form action=""  method="post" autocomplete="off">
+                <form autocomplete="off" (ngSubmit)="onSubmit()">
                     
                     <div class="input-group" style="width:500px;height:45px;">
                             <span class="input-group-addon" style="color:white; background-color: orange;width:40px;">
