--- a/userapp/src/app/components/about/about.component.html
+++ b/userapp/src/app/components/about/about.component.html
@@ -1,15 +1,17 @@
 <body class="body">
     <app-header></app-header>
-    <div class="container-fluid">   
+    <div class="container-fluid bg">   
       <img src="assets/images/yoga3.jpg" style="width:102.8%;height:500px;margin-left:-20px;margin-top:-20px;">
       </div>
     
       <div class="thought_about">
-        <p>"Meditation means the mind is turned back upon itself.The mind stops all the thought-waves and the world stops.Your consciousness expands,Every time you meditate you will keep your growth"</p>
+        <p>" Meditation means the mind is turned back upon itself. The mind stops all the thought-waves and the world stops. Your consciousness expands, Every time you meditate you will keep your growth. "</p>
         <p class="thought_author">-Swamy Vivekananda</p>
-      </div><br><br><br><br>
+      </div><br><br><br><br><br><br>
     
     
+
+      
       <div class="row rowover">
              
           <div class="col-md-3">
