--- a/userapp/src/app/components/header/header.component.css
+++ b/userapp/src/app/components/header/header.component.css
@@ -1,6 +1,6 @@
-.bg-light{
+.topnav{
     background-color:transparent !important;
-    height:90px;
+    height:auto;
     box-shadow:0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
 }
 #header_right{
@@ -9,15 +9,13 @@
 .navbar-brand{
     font-size:16px;
     font-family: 'Jura', sans-serif;
-    font-weight: bold; 
-    
+    font-weight: bold;     
 }
 .nav-item{
     font-size:15px;
     margin-left:25px;
     font-family: 'Jura', sans-serif;
-    font-weight: bold;
-    
+    font-weight: bold;   
 }
 .nav-link{
     color:#ff9933 !important;
@@ -28,10 +26,9 @@
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover{
    color:green !important;
 } 
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:active{
-    color:green !important;
- } 
+ 
 .logotxt h2{
+    margin-top:10px;
     font-family: 'Abril+Fatface', cursive;
     color:green;
     letter-spacing: 1px;
