--- a/userapp/src/app/components/header/header.component.html
+++ b/userapp/src/app/components/header/header.component.html
@@ -1,63 +1,34 @@
 
-<nav class="navbar navbar-fixed-top  navbar-expand-md bg-light navbar-light custnav">
-  <div class="container-fluid">
 
-<a class="navbar-brand" href="#"><img class="logoimg" src="assets/images/logo.png" height="90" width="90"></a>
-<span class="logotxt"><h2><b>ATMA DARSHANA YOGA</b></h2></span>
-
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="collapsibleNavbar">
-<ul class="navbar-nav">
-  <li class="nav-item">
-    <a class="nav-link" href="">HOME</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="about" >ABOUT</a>
-    <!-- <div class="dropdown-menu">
-        <a class="dropdown-item" href="founder">Founder</a>
-    </div> -->
-  </li>
-  <li class="nav-item">
-      <a class="nav-link" href="founder">FOUNDER</a>
-</li> 
-  <li class="nav-item">
-          <a class="nav-link" href="services">SERVICES</a>
-  </li> 
-  <li class="nav-item">
-    <a class="nav-link" href="events">EVENTS</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="gallery">GALLERY</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="contact">CONTACT US</a>
-  </li> 
-</ul>
-
-
-<!-- <ul class="navbar-nav ml-auto">
-  <li class="nav-item">
-      <a class="nav-link" href="#">
-              <i class="fa fa-facebook-square" style="font-size:36px;color:  #111E6C;"></i>
-      </a>
-  </li>
-  <li class="nav-item">
-          <a class="nav-link" href="#">
-                  <i class="fa fa-linkedin-square" style="font-size:36px;color: #111E6C;"></i>
-          </a>
-  </li> 
-  <li class="nav-item">
-          <a class="nav-link" href="#">
-                  <i class="fa fa-twitter-square" style="font-size:36px;color:#111E6C;"></i>
-          </a>
-  </li>  
-</ul> -->
-</div> 
-</div> 
+<nav class="navbar navbar-expand-md bg-light navbar-light topnav">
+  <img src="assets/images/logo.png" height="80" width="80">
+  <a class="navbar-brand logotxt" href="home"><h2><b>ATMA DARSHANA YOGA</b></h2></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="">HOME</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about" >ABOUT</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" href="founder">FOUNDER</a>
+    </li> 
+      <li class="nav-item">
+              <a class="nav-link" href="services">SERVICES</a>
+      </li> 
+      <li class="nav-item">
+        <a class="nav-link" href="events">EVENTS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="gallery">GALLERY</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact">CONTACT US</a>
+      </li>  
+    </ul>
+  </div>  
 </nav>
-
-
-
-
