--- a/userapp/src/app/components/home/home.component.html
+++ b/userapp/src/app/components/home/home.component.html
@@ -3,45 +3,42 @@
  
    <div class="container-fluid bg">   
          <img src="assets/images/bg2.jpg" height="500" width="104%">
-  </div><br><br><br>
+   </div><br><br><br>
   
-  <div class="row rowover">
-         
+   <div class="row rowover">   
         <div class="col-md-3">
                 <h1 style="font-size:30px;color:green;font-weight:bold;">HISTORY OF YOGA</h1>
         </div>
         <div class="col-md-9" style="margin-top:10px;">
                 <hr>
-        </div>
-        
-</div><br><br>
+        </div>        
+   </div><br><br>
 
-<p class="para">Yoga originated in ancient India thousands of years ago. The word “yoga” derives from the Sanskrit (ancient Indian language) word “yug,” meaning to yoke, or unite. Though many people in modern times think of yoga as just a physical practice that can help you become healthier physically, the deeper purpose of yoga practice is deeply spiritual 
+   <p class="para">Yoga originated in ancient India thousands of years ago. The word “yoga” derives from the Sanskrit (ancient Indian language) word “yug,” meaning to yoke, or unite. Though many people in modern times think of yoga as just a physical practice that can help you become healthier physically, the deeper purpose of yoga practice is deeply spiritual 
                 and intended to help unite your individual soul with the universal consciousness.</p>
 
-                <p class="para">Benefits of yoga includes enhanced blood circulation, lowered blood pressure, lowered respiratory rate, better cardiovascular endurance, stimulation of organs, improvement in gastrointestinal health, 
+   <p class="para">Benefits of yoga includes enhanced blood circulation, lowered blood pressure, lowered respiratory rate, better cardiovascular endurance, stimulation of organs, improvement in gastrointestinal health, 
                                 increased immunity, higher levels of pain tolerance, increased metabolism, renewed energy, sleep etc.</p><br><br>
-  <div class="row rowover">
-         
+  
+   <div class="row rowover">
           <div class="col-md-2">
                   <h1 style="font-size:30px;color:green;font-weight:bold;">OVERVIEW</h1>
           </div>
           <div class="col-md-10" style="margin-top:10px;">
                   <hr>
-          </div>
-          
-  </div><br><br>
+          </div>       
+   </div><br><br>
   
   
-  <div class="row rowhome">
+   <div class="row rowhome">
           <div class="col-md-4 content">
                   <div class="boxcontent">
                          <a href="about"><img src="assets/images/abt.jpg" alt="Avatar" class="image"></a> 
-                         <a href="about"> <div class="overlay">
+                         <a href="about"> 
+                                 <div class="overlay">
                                   <div class="text">ABOUT US</div>
-                          </div></a>
+                                  </div></a>
                   </div>
-  
           </div>
           <div class="col-md-4 content">
                   <div class="boxcontent">
@@ -50,9 +47,9 @@
                                   <div class="text">OUR SERVICES</div>
                           </div></a>
                   
-                  </div>
-                  
+                   </div>     
           </div>
+
           <div class="col-md-4 content">
                   <div class="boxcontent">
                         <a href="services"><img src="assets/images/asana.png" alt="Avatar" class="image"></a>
@@ -62,20 +59,22 @@
                   
                   </div>
           </div>
-  </div><br><br>
+
+   </div><br><br>
   
-  <div class="row rowover">
+   <div class="row rowover">
          
                 <div class="col-md-3">
                         <h1 style="font-size:30px;color:green;font-weight:bold;">TESTIMONIALS</h1>
                 </div>
                 <div class="col-md-9" style="margin-top:10px;">
                         <hr>
-                </div>
-                
-</div>
+                </div>       
+  </div>
 
-<div id="demo" class="carousel slide" data-ride="carousel">
+  <div class="row">
+          <div class="col-md-12">
+  <div id="demo" class="carousel slide" data-ride="carousel">
 
                 <!-- Indicators -->
                 <ul class="carousel-indicators">
@@ -86,7 +85,7 @@
                 </ul>
                 
                 <!-- The slideshow -->
-                <div class="carousel-inner">
+        <div class="carousel-inner">
                   <div class="carousel-item active">
                         <div class="thought_about">    
                                 <p>"There is total improvement of Health."</p>
@@ -112,7 +111,7 @@
                                 </div>
                   </div>
                   
-                </div>
+        </div>
                 
                 <!-- Left and right controls -->
                 <a class="carousel-control-prev" href="#demo" data-slide="prev">
@@ -122,7 +121,8 @@
                   <span class="carousel-control-next-icon"></span>
                 </a>
               </div>
-
+</div>
+</div>
 
 
   <br><br><br><br><br><br><br> 
